---
source: crates/sith_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    ListComp(
        ListCompExpr {
            range: 0..48,
            elt: Name(
                NameExpr {
                    range: 1..2,
                    id: "x",
                    ctx: Load,
                },
            ),
            generators: [
                Comprehension {
                    range: 3..17,
                    target: Tuple(
                        TupleExpr {
                            range: 7..12,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 7..8,
                                        id: "y",
                                        ctx: Store,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 10..12,
                                        id: "y2",
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        NameExpr {
                            range: 16..17,
                            id: "z",
                            ctx: Load,
                        },
                    ),
                    ifs: [],
                    is_async: false,
                },
                Comprehension {
                    range: 18..47,
                    target: Name(
                        NameExpr {
                            range: 22..23,
                            id: "a",
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        NameExpr {
                            range: 27..28,
                            id: "b",
                            ctx: Load,
                        },
                    ),
                    ifs: [
                        Compare(
                            CompareExpr {
                                range: 32..37,
                                left: Name(
                                    NameExpr {
                                        range: 32..33,
                                        id: "a",
                                        ctx: Load,
                                    },
                                ),
                                ops: [
                                    Lt,
                                ],
                                comparators: [
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 36..37,
                                            value: Int(
                                                5,
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        Compare(
                            CompareExpr {
                                range: 41..47,
                                left: Name(
                                    NameExpr {
                                        range: 41..42,
                                        id: "a",
                                        ctx: Load,
                                    },
                                ),
                                ops: [
                                    Gt,
                                ],
                                comparators: [
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 45..47,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    is_async: false,
                },
            ],
        },
    ),
    [],
)
